# GapMind

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_workspaces.py  0003_phase1b.py  0004_paper_parse_state.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: config.py  deps.py  logging.py
backend/app/db/: base.py  models.py  session.py
backend/app/domains/: __init__.py
backend/app/domains/artifact/: __init__.py  chunker.py  models.py  pdf_metadata.py  pdf_parser.py  router.py  schemas.py  service.py
backend/app/domains/knowledge/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domains/paper/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domains/retrieval/: __init__.py  milvus_client.py  schemas.py  service.py
backend/app/domains/task/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domains/timeline/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/gateway/: __init__.py  embedding.py  llm.py  semantic_scholar.py
backend/app/workers/: __init__.py  celery_app.py
backend/data/: README.md
backend/storage/: README.md
backend/tests/: conftest.py  test_health.py  test_knowledge_api.py  test_paper_api.py  test_parse_pipeline.py  test_pdf_metadata_api.py  test_pdf_parser_chunker.py  test_semantic_scholar_api.py  test_task_api.py  test_workspace_api.py
docs/: GapMind Benchmark plan.md  (+7 more)
(+42 files in other folders)
