[project]
name = "gapmind-backend"
version = "0.1.0"
description = "GapMind backend - Evidence-grounded AI Research Workspace"
requires-python = ">=3.11"
readme = "../README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.ruff.format]
quote-style = "double"
